Fixed the stylesheet so there won't be a horizontal scrollbar on small browser window widths.

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,6 @@ a:hover { color : red }
     border-style : solid;
     */
     background-color : white;
-    width: 70%;
 }
 
 p.desc { margin-left : 3em }
